- Working e2e implementation - Reorder feature file folder structure - TODO: Refactor step definitions

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "author": "Miklós Richárd Szanyi",
-  "name": "KasaCaseStudy",
+  "name": "kasa-case-study",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
